[package]
name = "vulkan-tutorial-rs"
version = "0.1.0"
authors = ["Elanis <elanis@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17.0"
image = "0.20.1"
vulkano = "0.18.0"
vulkano-shaders = "0.18.0"
vulkano-win = "0.18.0"
winit = "0.22.0"